--- a/final.html
+++ b/final.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Developer Profile Visualization</title>
-    <link rel="stylesheet" type="text/css" href="lab.css">
+    <link rel="stylesheet" type="text/css" href="final.css">
     <script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
   </head>
