--- a/final.html
+++ b/final.html
@@ -5,6 +5,7 @@
     <title>Developer Profile Visualization</title>
     <link rel="stylesheet" type="text/css" href="final.css">
     <script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
+    <script type="text/javascript" src="crossfilter.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
   </head>
   <body>
