Integrated w/ Larry's code

--- a/final.html
+++ b/final.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Developer Profile Visualization</title>
+    <h1>Global Terrorist Attacks</h1>
     <link rel="stylesheet" type="text/css" href="final.css">
     <script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
     <script type="text/javascript" src="crossfilter.min.js"></script>
@@ -11,5 +12,7 @@
   </head>
   <body>
     <script type="text/javascript" src="final.js"></script>
+    <div class="paragraph" id="paragraph">
+    <div id="removablediv">
   </body>
 </html>
