--- a/final.html
+++ b/final.html
@@ -11,5 +11,7 @@
   </head>
   <body>
     <script type="text/javascript" src="final.js"></script>
+    <div class="paragraph" id="paragraph">
+    <div id="removablediv">
   </body>
 </html>
