css styling minus emphasis in description paragraph

--- a/final.html
+++ b/final.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Developer Profile Visualization</title>
+    <h2>Global Terrorism Index</h2>
+    <h4>Definition of terrorism:</h4>
+    <h4 class="definition"><i>"The threatened or actual use of illegal force and violence by a non-state actor to attain a political, economic, religious, or social goal through fear, coercion, or intimidation."</i></h4>
+    <h5>Data provided by <a href="https://www.kaggle.com/START-UMD/gtd">Kaggle</a></h5>
     <link rel="stylesheet" type="text/css" href="final.css">
     <script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
     <script type="text/javascript" src="crossfilter.min.js"></script>
