--- a/final.html
+++ b/final.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Developer Profile Visualization</title>
+    <title>Global Terrorism Visualization</title>
     <h2>Global Terrorism Index</h2>
     <h4>Definition of terrorism:</h4>
     <h4 class="definition"><i>"The threatened or actual use of illegal force and violence by a non-state actor to attain a political, economic, religious, or social goal through fear, coercion, or intimidation."</i></h4>
